Added some instructions

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <body>
       <div>
         <div>
+          <h2> - Double click to add or remove point</h2>
+          <h2> - Click and drag to move a point</h2>
+        </div>
+        <div>
           <button onclick="changeToLinear()" class="button">Linear</button>
           <button onclick="changeToSquare()" class="button">Square</button>
         </div>
