--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <script src="jquery-3.2.1.js"></script>
-        <script src="https://d3js.org/d3.v4.min.js"></script>
+        <script src="dependencias/jquery-3.2.1.js"></script>
+        <script src="dependencias/d3.js"></script>
+        <script src="dependencias/fourier.js"></script>
         <script type="text/javascript" src="index.js"></script>
         <link rel="stylesheet" href="style.css">
         <title>PDI Final</title>
