Fixed depedency with canvas_editor.js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="dependencias/jquery-3.2.1.js"></script>
         <script src="dependencias/d3.js"></script>
         <script src="dependencias/fourier.js"></script>
+        <script src="dependencias/canvas_editor.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <link rel="stylesheet" href="style.css">
         <title>PDI Final</title>
